[package]
name = "beatui"
version = "0.1.0"
authors = ["joeliscoding"]
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/joeliscoding/beatui"
description = "A TUI app that act as a per project task list."

[dependencies]
ratatui = "0.29.0"
rodio = "0.21.1"
tokio = { version = "1", features = ["full"] }
