[package]
name = "beatui"
version = "0.1.0"
authors = ["joeliscoding"]
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/joeliscoding/beatui"
description = "Play and manage your tunes from the terminal."

[dependencies]
ratatui = "0.29.0"
rodio = "0.21.1"
tokio = { version = "1", features = ["full"] }
